[v9r0]
use DIRAC v6r19p5

* the test directory must be in the directory which set by rootPath
* also take only active SEs for _byRun
* test fixes
* print out LFNs even if --FixIt is used
* consider dumpWithReplicas and dumpAtSE as an AND
* cumulate dump with replicas and dump at SE
* fix path
* fix path
* added WGProds template
* added simplified MC simulation template
* Tests: add BOINC tests to Jenkins
* BOINC: update requestJob signature
* Tests/Docs: replicate ProtocolName with PluginName
* Tests: use another dataset for integration tests
* DMS: move import in dirac-dms-add-transformation
* Docs: modify BOINC doc
* corrected creation of configuration for client installation
* fix production request tests
* fixes for TS test
* use the proper grouping
* add option --Terse
* aborting if no transformation types are specified
* remove the error log level
* fix imports
* more locations
* fix
* fix filter of processed files
* split of system tests
* change user name
* tests: use the correct directory for job submission
* CI: factorize tests
* fix DB fields
* NagiosTopology: fix new ipv6 methods
* Gitlab-ci: run pylint and fail if there is an error
* Doc: link boinc
* remove import
* remove print
* remove addDefaultOptionValue call
* remove script
* Small fixes in transformationDebug
* Fix checkJobs in case of multiple errors
* keep script minimal
* use transID instead or arg
* cut long line
* improve help
* remove __init__ from scripts
* New script to get transformation information
* Fix rejections-stats to get all invisible files
* Inherit from object and add StorageElement import
* return an error message when the following patameters are not provided: jobId,lfn,jobName
* fix the bookkeeping report
* use rootPath
* if no doneTasks, continue
* path fixes
* just replacing old CLOUD site
* removing faulty lines
* ignoring pylintrc
* use protocol access for tests
* RAWIntegrity: add a sleep in the test
* fixed test
* pylint
* fix test
* fixed Accounting tests