@@ -1,3 +1,13 @@
+[v9r0p1]
+use DIRAC v6r19p6
+
+* remove import
+* remove protection against Failover replicas
+* clear replica cache if files not at SE for a run
+* cast ParameterNames to list
+* bug fix
+* fix for bk query
+
 [v9r0]
 use DIRAC v6r19p5
 
